modified first and executive pages

--- a/Trabook/index.html
+++ b/Trabook/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="executive.css">
     <link rel="stylesheet" href="vacationpage.css">
     <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="blogpage.css">
 
     <link rel="icon" type="image/png" href="asserts/Trabook_logo.png">
 </head>
@@ -67,6 +68,7 @@
                 </div>
                 <div class="right_container">
                     <img class="mainimg" src="asserts/Thum.png" alt="Man Exploring">
+                    <img class="BG_thum" src="asserts/bg_thumbnail.png" alt="Background thum">
                 </div>
             </div>
             <div class="searchbar flex">
@@ -104,7 +106,7 @@
                 <h1 class="todo_head volkhov-bold">Things you need <span class="txt_todo">to do</span></h1>
                 <p class="todo_para poppins-regular">We ensure that you'll embark on a perfectly planned, safe vacation
                     at a price you can afford.</p>
-                <!-- <img class="flight" src="asserts/ToDo_Flight.png" alt="Flight image"> -->
+                <img class="flight" src="asserts/ToDo_Flight.png" alt="Flight image">
             </div>
             <div class="todo_activites flex">
                 <div class="todo_lists signuptodo flex">
@@ -247,7 +249,7 @@
                 <h1 class="todo_head volkhov-bold">Best <span class="txt_todo">vecation plan</span></h1>
                 <p class="todo_para poppins-regular">Plan your perfect vacation with out travel agency. Choose among
                     hundreds of all-inclusive offers!</p>
-                <!-- <img class="tree" src="asserts/Coconet tree.png" alt="Coconettree image"> -->
+                <img class="tree" src="asserts/Coconet tree.png" alt="Coconettree image">
             </div>
             <div class="nav_arrow flex">
                 <div class="sliders flex">
@@ -360,10 +362,27 @@
             </div>
             <div class="right_section flex">
                 <img class="comments" src="asserts/commends.png" alt="Peoples commends">
+                <img class="flight" src="asserts/aboutus_flight.png" alt="Flight">
             </div>
 
         </div>
     </div>
+    <!-- Latest blog -->
+    <div class="blog felx">
+        <div class="blog_container flex">
+            <div class="txt_con flex">
+                <h1 class="main_txt volkhov-bold">Get update with <p class="glow">latest blog</p></h1>
+            </div>
+            <div class="blog_info flex">
+                <div class="blog_details">
+                    <div class="info">
+                        <img class="blog_img" src="asserts/blog1.png" alt="blog 1 image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
