--- a/Trabook/index.html
+++ b/Trabook/index.html
@@ -16,6 +16,13 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="herosection.css">
     <link rel="stylesheet" href="todosection.css">
@@ -23,6 +30,7 @@
     <link rel="stylesheet" href="vacationpage.css">
     <link rel="stylesheet" href="aboutus.css">
     <link rel="stylesheet" href="blogpage.css">
+    <link rel="stylesheet" href="footer.css">
 
     <link rel="icon" type="image/png" href="asserts/Trabook_logo.png">
 </head>
@@ -371,18 +379,144 @@
     <div class="blog felx">
         <div class="blog_container flex">
             <div class="txt_con flex">
-                <h1 class="main_txt volkhov-bold">Get update with <p class="glow">latest blog</p></h1>
+                <h1 class="main_txt volkhov-bold">Get update with <p class="glow">latest blog</p>
+                </h1>
             </div>
             <div class="blog_info flex">
-                <div class="blog_details">
-                    <div class="info">
-                        <img class="blog_img" src="asserts/blog1.png" alt="blog 1 image">
+                <div class="blog_details flex">
+                    <div class="info flex">
+                        <div class="img_blog flex">
+                            <img class="blog_img flex" src="asserts/blog1.png" alt="blog 1 image">
+                        </div>
+                        <div class="txt_blog flex">
+                            <h4 class="blog_txt poppins-medium">The Amazing Difference a year of Traveling.</h4>
+                            <p class="postDate inter">July 27, 2021</p>
+                        </div>
                     </div>
+                    <div class="info flex">
+                        <div class="img_blog flex">
+                            <img class="blog_img flex" src="asserts/blog2.png" alt="blog 1 image">
+                        </div>
+                        <div class="txt_blog flex">
+                            <h4 class="blog_txt poppins-medium">Travel far enough, you meet yourself.</h4>
+                            <p class="postDate inter">July 27, 2021</p>
+                        </div>
+                    </div>
+                    <div class="info flex">
+                        <div class="img_blog flex">
+                            <img class="blog_img flex" src="asserts/blog3.png" alt="blog 1 image">
+                        </div>
+                        <div class="txt_blog flex">
+                            <h4 class="blog_txt poppins-medium">How to Save Money While Visiting Africa.</h4>
+                            <p class="postDate inter">July 27, 2021</p>
+                        </div>
+                    </div>
+                    <div class="info flex">
+                        <div class="img_blog flex">
+                            <img class="blog_img flex" src="asserts/blog4.png" alt="blog 1 image">
+                        </div>
+                        <div class="txt_blog flex">
+                            <h4 class="blog_txt poppins-medium">Reflections on 5Months of Travel: Time to Hang.</h4>
+                            <p class="postDate inter">July 27, 2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider flex">
+                    <img src="asserts/Slider.png" alt="slider">
                 </div>
             </div>
         </div>
     </div>
-    
+    <!-- FOOTER -->
+    <footer class="footer flex">
+        <div class="subscribe_page">
+            <!-- <h1>
+
+            </h1>
+            <div>
+                
+            </div> -->
+        </div>
+        <div class="butomn_footer flex">
+            <div class="footer_info flex">
+                <div class="container_foot flex">    
+                    <div class="left_info flex">
+                        <img class="logo" src="asserts/Logo.png" alt="Trabook logo">
+                        <p class="para poppins-medium">
+                            Book your trip in minute, get full Control for much longer.
+                        </p>
+                        <div class="social_media">
+                            <img src="asserts/Social.png" alt="Social Media">
+                        </div>
+                    </div>
+                    <div class="right_info flex">
+                        <div class="info flex">
+                            <div class="hedding flex">
+                                <h3 class="hedding_info poppins-semibold">Company</h3>
+                            </div>
+                            <div class="links flex">
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">About</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Careers</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Logistic</a>
+                                </div>
+                                <div class="underLinks felx">
+                                    <a class="subLinks poppins-regular" href="#">Privacy & Policy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info flex">
+                            <div class="hedding flex">
+                                <h3 class="hedding_info poppins-semibold">Contact</h3>
+                            </div>
+                            <div class="links flex">
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">help/FAQ</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Press</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Affilates</a>
+                                </div>
+                                <div class="underLinks felx">
+                                    <a class="subLinks poppins-regular" href="#"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info flex">
+                            <div class="hedding flex">
+                                <h3 class="hedding_info poppins-semibold">More</h3>
+                            </div>
+                            <div class="links flex">
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Press Center</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Our Blog</a>
+                                </div>
+                                <div class="underLinks flex">
+                                    <a class="subLinks poppins-regular" href="#">Low fair tips</a>
+                                </div>
+                                <div class="underLinks felx">
+                                    <a class="subLinks poppins-regular" href="#"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="copyRights flex">
+                    <p class="poppins-regular">Copyrights, Trabook 2022, All rights reserved.</p>
+                    <p class="poppins-regular">Terms & Conditions</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
