--- a/Trabook/index.html
+++ b/Trabook/index.html
@@ -429,13 +429,22 @@
     </div>
     <!-- FOOTER -->
     <footer class="footer flex">
-        <div class="subscribe_page">
-            <!-- <h1>
-
-            </h1>
-            <div>
-                
-            </div> -->
+        <div class="subscribe_page flex">
+            <div class="dealsOffers flex">
+                <h1 class="volkhov-bold mainText">
+                    Subscribe and get exclusive deals & offer
+                </h1>
+                <div class="mail flex">
+                    <img id="text" class="mailBox" src="asserts/mailbox.png" alt="mailbox">
+                    <input class="text" type="text" placeholder="Enter your mail">
+                    <button class="subscribe poppins-regular">
+                        Subscribe
+                    </button>
+                    
+                </div>
+                <img class="element" src="asserts/Element.png" alt="Element">
+                <img class="cocoTree" src="asserts/Footer_coco.png" alt="Coconettree">
+            </div>
         </div>
         <div class="butomn_footer flex">
             <div class="footer_info flex">
